# hinzu

./: .gitignore  .housekeeping.toml  CHANGELOG.md  Cargo.toml  README.md  hinzu-self.toml  hinzu.toml  libraries.example.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
adapters/go/tests/: sample-facts.json
adapters/go/tests/fixture/: go.mod  hinzu.toml
adapters/go/tests/fixture/core/: core.go
adapters/go/tests/fixture/effects/: effects.go
adapters/python/: README.md  analyze.py  lspclient.py  pyproject.toml  requirements.txt
adapters/python/tests/: reference-fixture-facts.json  sample-facts.json  ty_lsp_probe.py
adapters/python/tests/fixture/: core.py  effects.py  hinzu.toml  pyproject.toml
adapters/python/tests/reference-fixture/: core.py  effects.py  hinzu.toml  models.py  pyproject.toml
adapters/rust/tests/: reference-fixture-facts.json
adapters/rust/tests/reference-fixture/: Cargo.toml  hinzu.toml
adapters/rust/tests/reference-fixture/src/: core.rs  effects.rs  lib.rs
adapters/typescript/: README.md  analyze.mjs  common.mjs  package.json  structural.mjs
adapters/typescript/tests/: reference-fixture-facts.json  sample-facts.json
adapters/typescript/tests/fixture/: hinzu.toml
adapters/typescript/tests/fixture/src/: core.ts  io.ts
adapters/typescript/tests/reference-fixture/: hinzu.toml  tsconfig.json
adapters/typescript/tests/reference-fixture/src/: core.ts  models.ts
crates/hinzu-cli/: Cargo.toml
crates/hinzu-cli/src/: adapter_harness.rs  api_diff.rs  api_fluessig.rs  api_py.rs  api_rust.rs  api_ts.rs  body_cmd.rs  go_adapter.rs  library_config.rs  library_extract.rs  library_rustdoc.rs  library_tier.rs  main.rs  portdiff_config.rs  portdiff_html.rs  py_adapter.rs  rust_adapter.rs  rust_source.rs  similar_cmd.rs  structural_rust.rs  ts_adapter.rs
crates/hinzu-cli/tests/: check.rs  go_check.rs  model_check.rs  model_stateright_check.rs  py_check.rs  ranges_check.rs  rust_check.rs  similar.rs  similar_libraries.rs  ts_check.rs
crates/hinzu-cli/tests/fixtures/: facts.json  policy.toml  similar-fixture.json  similar-ts-fixture.json
crates/hinzu-cli/tests/fixtures/ranges-demo/: Cargo.toml  bodies.json
crates/hinzu-cli/tests/fixtures/ranges-demo/src/: lib.rs
crates/hinzu-cli/tests/fixtures/ts-structural-src/: tsconfig.json
crates/hinzu-cli/tests/fixtures/ts-structural-src/src/: loaders.ts
crates/hinzu-core/: Cargo.toml
crates/hinzu-core/annotations/: go.toml  node-libs.toml  node.toml  python-libs.toml  python.toml  rust-libs.toml  std.toml
crates/hinzu-core/src/: api.rs  apidiff.rs  dag.rs  effects.rs  facts.rs  fluessig_api.rs  graph.rs  lib.rs  plan.rs  policy.rs  roots.rs  rules.rs  store.rs
crates/hinzu-core/src/absint/: body.rs  emit_common.rs  engine.rs  hazards.rs  interval.rs  mod.rs  quint.rs  stateright.rs  test_support.rs
crates/hinzu-core/src/fluessig_api/: helpers.rs  mint.rs  mod.rs  tests.rs  tests_builtin.rs  tests_mint.rs
crates/hinzu-core/src/graph/: merge.rs  mod.rs
crates/hinzu-core/src/portdiff/: config.rs  delta.rs  merge.rs  mod.rs  report.rs  tests.rs
crates/hinzu-core/src/similarity/: explain.rs  libraries.rs  mod.rs  profile.rs  tests.rs
crates/hinzu-core/src/similarity/libraries/: tests.rs
crates/hinzu-dbsp/: Cargo.toml
crates/hinzu-dbsp/src/: lib.rs
crates/hinzu-lsp/: Cargo.toml
crates/hinzu-lsp/configs/: go.toml  python.toml
crates/hinzu-lsp/examples/: extract.rs
crates/hinzu-lsp/src/: api.rs  client.rs  config.rs  extract.rs  lib.rs  treesitter.rs
crates/hinzu-rustc-driver/: Cargo.toml  rust-toolchain.toml
crates/hinzu-rustc-driver/src/: bodies.rs  main.rs  signatures.rs
notes/: api-diff.md  api-structured-type-refs.md  api.md  dag-example.json  dag.md  dataflow-survey.md  design.md  getting-started.md  go-catalog.md  graph-example.json  graph.md  model-finishing.md  plan-example.json  plan.md  port-diff.md  port-pi-atilla.toml  port-pi-pidgin.toml  python-catalog.md  rules-design.md  rust-libs-catalog.md  self-check.md  slice-1-findings.md  typescript-catalog.md
notes/design/: similarity-libraries.md  similarity.md
scripts/: dev.sh
styles/config/vocabularies/Powderworks/: accept.txt
