# The hinzu Python adapter — a ty-based extractor emitting hinzu FactSet JSON.
# It has no Python-package runtime dependency (`ast` ships with CPython); its
# sole resolution backend is the `ty` binary (Astral's type checker), installed
# separately: `uv tool install ty` or `pip install ty`. If `ty` is absent the
# adapter exits nonzero — there is no fallback resolver.
[project]
name = "hinzu-python-adapter"
version = "0.1.0"
description = "The hinzu Python adapter — a ty-driven extractor emitting hinzu FactSet JSON."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
hinzu-py = "analyze:main"
