[package]
name = "hinzu-cli"
description = "The hinzu CLI — a thin shell over hinzu-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hinzu"
path = "src/main.rs"

[dependencies]
hinzu-core = { path = "../hinzu-core" }
anyhow = { workspace = true }
clap = { workspace = true }
