[package]
name = "hinzu-cli"
description = "The hinzu CLI — a thin shell over hinzu-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hinzu"
path = "src/main.rs"

[dependencies]
hinzu-core = { path = "../hinzu-core" }
hinzu-dbsp = { path = "../hinzu-dbsp" }
hinzu-lsp = { path = "../hinzu-lsp" }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
