[package]
name = "hinzu-cli"
description = "The hinzu CLI — a thin shell over hinzu-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hinzu"
path = "src/main.rs"

[dependencies]
hinzu-core = { path = "../hinzu-core" }
hinzu-dbsp = { path = "../hinzu-dbsp" }
hinzu-lsp = { path = "../hinzu-lsp" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# The structural (syn-based) Rust extractor behind `hinzu similar`. syn 2 is
# already resolved transitively in Cargo.lock; span-locations gives real line
# numbers on stable.
syn = { version = "2", features = ["full", "visit", "extra-traits", "printing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
