[package]
name = "hinzu-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hinzu-core = { path = "../hinzu-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
glob.workspace = true
regex = "1"
lsp-types = "0.97"
